--- a/less/about.less
+++ b/less/about.less
@@ -95,6 +95,13 @@ h4 {
 	}
   }
 
+  section {
+	  @media @mobile {
+		  margin-top: 5% ;
+		  margin-bottom: 5%;
+	  }
+  }
+
 .theTeam {
 	text-align: center;
 	display: flex;
